evaluation-run/613/k8s/prod/bookstore-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-frontend
  namespace: bookstore
  labels:
    app: bookstore-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-frontend
  template:
    metadata:
      labels:
        app: bookstore-frontend
    spec:
      containers:
        - name: bookstore-frontend
          image: ralfx22/bsa-frontend:latest
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
            limits:
              memory: "128Mi"
      restartPolicy: Always
