evaluation-run/613/k8s/prod/bookstore-mysql-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-mysql-db
  namespace: bookstore
  labels:
    app: bookstore-mysql-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-mysql-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bookstore-mysql-db
    spec:
      containers:
        - name: bookstore-mysql-db
          image: mysql:5.7
          ports:
            - containerPort: 3306
              protocol: TCP
          resources:
            requests:
              memory: "512Mi"
            limits:
              memory: "512Mi"
          volumeMounts:
            - name: bookstore-db-volume
              mountPath: /var/lib/mysql
      restartPolicy: Always
      volumes:
        - name: bookstore-db-volume
          persistentVolumeClaim:
            claimName: bookstore-db-volume
