evaluation-run/613/k8s/prod/bookstore-order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-order-service
  namespace: bookstore
  labels:
    app: bookstore-order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-order-service
  template:
    metadata:
      labels:
        app: bookstore-order-service
    spec:
      containers:
        - name: bookstore-order-service
          image: ralfx22/bsa-order-service:latest
          ports:
            - containerPort: 7001
              protocol: TCP
          resources:
            requests:
              memory: "640Mi"
            limits:
              memory: "640Mi"
      restartPolicy: Always
