evaluation-run/613/k8s/prod/bookstore-payment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-payment-service
  namespace: bookstore
  labels:
    app: bookstore-payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-payment-service
  template:
    metadata:
      labels:
        app: bookstore-payment-service
    spec:
      containers:
        - name: bookstore-payment-service
          image: ralfx22/bsa-payment-service:latest
          ports:
            - containerPort: 8001
              protocol: TCP
          resources:
            requests:
              memory: "640Mi"
            limits:
              memory: "640Mi"
      restartPolicy: Always
