evaluation-run/613/k8s/prod/bookstore-telegraf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-telegraf
  namespace: bookstore
  labels:
    app: bookstore-telegraf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-telegraf
  template:
    metadata:
      labels:
        app: bookstore-telegraf
    spec:
      containers:
        - name: bookstore-telegraf
          image: ralfx22/bsa-telegraf:latest
          ports:
            - containerPort: 8125
              protocol: UDP
          resources:
            requests:
              memory: "128Mi"
            limits:
              memory: "128Mi"
      restartPolicy: Always
