evaluation-run/613/k8s/prod/bookstore-account-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-account-service
  namespace: bookstore
  labels:
    app: bookstore-account-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4001
      targetPort: 4001
      protocol: TCP
  selector:
    app: bookstore-account-service
