evaluation-run/613/k8s/prod/bookstore-influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-influxdb
  namespace: bookstore
  labels:
    app: bookstore-influxdb
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8086
      targetPort: 8086
      protocol: TCP
  selector:
    app: bookstore-influxdb
