evaluation-run/613/k8s/prod/bookstore-payment-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-payment-service
  namespace: bookstore
  labels:
    app: bookstore-payment-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8001
      targetPort: 8001
      protocol: TCP
  selector:
    app: bookstore-payment-service
